--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -392,7 +392,7 @@
     {sp}{SP}{Service Provider}
     
 \newacronym[description={\glslink{samlg}{Security Assertion Markup Language}}]
-    {saml}{SAML}{Security Assertion Markup Language}
+    {saml}{Security Assertion Markup Language}{SAML}
     
 \newacronym[description={\glslink{xmlg}{eXtensible Markup Language}}]
     {xml}{XML}{eXtensible Markup Language}
